--- a/syz-cluster/workflow/configs/bpf/base.cfg
+++ b/syz-cluster/workflow/configs/bpf/base.cfg
@@ -11,10 +11,10 @@
 	"bpf", "mkdir", "mount$bpf", "unlink", "close",
 	"perf_event_open*", "ioctl$PERF*", "getpid", "gettid",
 	"socketpair", "sendmsg", "recvmsg", "setsockopt$sock_attach_bpf",
-	"socket$kcm", "ioctl$sock_kcm*", "syz_clone",
+	"socket", "ioctl$sock_kcm*", "syz_clone",
 	"mkdirat$cgroup*", "openat$cgroup*", "write$cgroup*",
 	"openat$tun", "write$tun", "ioctl$TUN*", "ioctl$SIOCSIFHWADDR",
-	"openat$ppp", "syz_open_procfs$namespace"
+	"openat$ppp", "syz_open_procfs$namespace", "openat$pidfd", "fstat"
     ],
     "procs": 3,
     "sandbox": "none",
