--- a/syz-cluster/workflow/configs/net/base.cfg
+++ b/syz-cluster/workflow/configs/net/base.cfg
@@ -22,7 +22,8 @@
 	    "mkdirat$cgroup*", "openat$cgroup*", "write$cgroup*",
 	    "clock_gettime", "bpf", "openat$tun", "openat$ppp",
 	    "syz_open_procfs$namespace", "syz_80211_*", "nanosleep",
-	    "openat$nci", "ioctl$IOCTL_GET_NCIDEV_IDX"
+	    "openat$nci", "ioctl$IOCTL_GET_NCIDEV_IDX", "openat$rfkill",
+	    "openat$6lowpan*", "openat$pidfd", "openat$tcp*"
     ],
     "procs": 3,
     "sandbox": "none",
