syz-cluster: monitor overlayfs series

--- a/syz-cluster/overlays/gke/prod/global-config.yaml
+++ b/syz-cluster/overlays/gke/prod/global-config.yaml
@@ -18,6 +18,7 @@ data:
       - io-uring
       - linux-wireless
       - linux-mm
+      - linux-unionfs
     emailReporting:
       name: "syzbot ci"
       sender: dashapi
